# Error-Management-System

./: .gitignore  Dockerfile  Makefile  README.md  agent_directives.md  development_plan.md  docker-compose.yml  encryption_key.key  entrypoint.sh  install_pip.sh  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  setup.cfg  setup.py  test_output.txt
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
docs/: agent_directives.md  agent_manager.md  agent_performance.md  architecture.md  development_plan.md  documentation.md  error_dashboard.md  error_fixer.md  error_handler.md  error_management.md  file_consolidator.md  file_management.md  file_monitor.md  final_report.md  implementation_plans.md  index.md  memory_manager.md  phase2_testing.md  phase4_5_docs_qa.md  project_scanner.md  pytest_fixer.md  pytest_plugin.md  runtime_fixer.md  secure_environment.md  security_manager.md  testing_architecture.md
kubernetes/: configmap.yaml  deployment.yaml
scripts/: cleanup.sh  deploy_local.sh  project_setup.sh  run.sh  setup_dashboard.sh  start.sh  verify_and_fix.sh
src/: __init__.py  error_manager.py
tests/: conftest.py  test_acero.py  test_agent_lifecycle.py  test_agent_metrics.py  test_agent_monitor.py  test_agent_monitoring.py  test_aix.py  test_array.py  test_basic.py  test_c_parser_only.py  test_callback.py  test_conversion_utils.py  test_cpu_features.py  test_crackfortran.py  test_dashboard.py  test_dashboard_integration.py  test_dataset.py  test_datetime.py  test_deprecations.py  test_dir_util.py  test_dlpack.py  test_error_handling.py  (+48 more)
(+214 files in other folders)
